Import of DAAN/XML-RPC-0.9 from CPAN.
gitpan-cpan-distribution: XML-RPC
gitpan-cpan-version:      0.9
gitpan-cpan-path:         DAAN/XML-RPC-0.9.tar.gz
gitpan-cpan-author:       DAAN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         XML-RPC
-version:      0.8
-version_from: lib/XML/RPC.pm
-installdirs:  site
+--- #YAML:1.0
+name:               XML-RPC
+version:            0.9
+abstract:           Pure Perl implementation for an XML-RPC client and server
+author:
+    - Niek Albers
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    XML::TreePP:                    0
-    LWP::UserAgent:                 0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    LWP::UserAgent:  0
+    Test::More:      0.17
+    XML::TreePP:     0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
